// Licensed to Apache Software Foundation (ASF) under one or more contributor
// license agreements. See the NOTICE file distributed with
// this work for additional information regarding copyright
// ownership. Apache Software Foundation (ASF) licenses this file to you under
// the Apache License, Version 2.0 (the "License"); you may
// not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.

package afpacket

import (
	"time"

	"github.com/google/gopacket"
	"github.com/google/gopacket/layers"
	v1 "skywalking.apache.org/repo/goapi/satellite/data/v1"
)

// httpHandler implements PacketHandler for HTTP packets
type httpHandler struct {
	stats HandlerStats
}

// NewHTTPHandler creates a new HTTP packet handler
func NewHTTPHandler() PacketHandler {
	return &httpHandler{}
}

func (h *httpHandler) Name() string {
	return "http-handler"
}

func (h *httpHandler) CanHandle(packet gopacket.Packet) bool {
	// Check if packet contains HTTP data
	if tcpLayer := packet.Layer(layers.LayerTypeTCP); tcpLayer != nil {
		tcp, _ := tcpLayer.(*layers.TCP)
		// Check for common HTTP ports
		return tcp.DstPort == 80 || tcp.SrcPort == 80 || tcp.DstPort == 443 || tcp.SrcPort == 443
	}
	return false
}

func (h *httpHandler) Handle(packet gopacket.Packet) ([]*v1.SniffData, error) {
	// TODO: Extract HTTP data from packet and create SniffData
	// This is a placeholder implementation

	sniffData := &v1.SniffData{
		// TODO: Populate with actual HTTP data
		Name:      "http-data",
		Timestamp: time.Now().UnixNano(),
	}

	return []*v1.SniffData{sniffData}, nil
}

func (h *httpHandler) GetStats() HandlerStats {
	return h.stats
}

// tcpHandler implements PacketHandler for TCP packets
type tcpHandler struct {
	stats HandlerStats
}

// NewTCPHandler creates a new TCP packet handler
func NewTCPHandler() PacketHandler {
	return &tcpHandler{}
}

func (t *tcpHandler) Name() string {
	return "tcp-handler"
}

func (t *tcpHandler) CanHandle(packet gopacket.Packet) bool {
	// Check if packet contains TCP layer
	return packet.Layer(layers.LayerTypeTCP) != nil
}

func (t *tcpHandler) Handle(packet gopacket.Packet) ([]*v1.SniffData, error) {
	// TODO: Extract TCP data from packet and create SniffData
	// This is a placeholder implementation

	sniffData := &v1.SniffData{
		// TODO: Populate with actual TCP data
		Name:      "tcp-data",
		Timestamp: time.Now().UnixNano(),
	}

	return []*v1.SniffData{sniffData}, nil
}

func (t *tcpHandler) GetStats() HandlerStats {
	return t.stats
}

// udpHandler implements PacketHandler for UDP packets
type udpHandler struct {
	stats HandlerStats
}

// NewUDPHandler creates a new UDP packet handler
func NewUDPHandler() PacketHandler {
	return &udpHandler{}
}

func (u *udpHandler) Name() string {
	return "udp-handler"
}

func (u *udpHandler) CanHandle(packet gopacket.Packet) bool {
	// Check if packet contains UDP layer
	return packet.Layer(layers.LayerTypeUDP) != nil
}

func (u *udpHandler) Handle(packet gopacket.Packet) ([]*v1.SniffData, error) {
	// TODO: Extract UDP data from packet and create SniffData
	// This is a placeholder implementation

	sniffData := &v1.SniffData{
		// TODO: Populate with actual UDP data
		Name:      "udp-data",
		Timestamp: time.Now().UnixNano(),
	}

	return []*v1.SniffData{sniffData}, nil
}

func (u *udpHandler) GetStats() HandlerStats {
	return u.stats
}
