@startuml AFPacket Components Architecture

!define COMPONENT_COLOR #E1F5FE
!define INTERFACE_COLOR #FFF3E0
!define HANDLER_COLOR #F3E5F5
!define MANAGER_COLOR #E8F5E8

package "AFPacket Plugin" {
    
    ' Interfaces
    interface PacketCapture <<interface>> INTERFACE_COLOR {
        +Prepare() error
        +Start(ctx, wg) error
        +Close() error
        +GetPacketSource() *PacketSource
        +GetStats() CaptureStats
    }
    
    interface DataPipeline <<interface>> INTERFACE_COLOR {
        +Prepare() error
        +Start(ctx, wg) error
        +Close() error
        +Submit([]*SniffData) error
        +GetStats() PipelineStats
    }
    
    interface PacketHandler <<interface>> INTERFACE_COLOR {
        +Handle(packet) []*SniffData
        +GetType() string
    }
    
    interface HandlerManager <<interface>> INTERFACE_COLOR {
        +RegisterHandler(PacketHandler)
        +GetHandlers() []PacketHandler
        +Start(ctx, wg) error
        +Close() error
    }
    
    ' Main Server Component
    class Server <<component>> COMPONENT_COLOR {
        -config Config
        -capture PacketCapture
        -pipeline DataPipeline
        -handlerManager HandlerManager
        -stats ServerStats
        -mu sync.RWMutex
        --
        +Prepare() error
        +Start(ctx, wg) error
        +Close() error
        +GetStats() ServerStats
    }
    
    ' Packet Capture Implementation
    class packetCapture <<implementation>> COMPONENT_COLOR {
        -interfaceName string
        -bufferSize int
        -filter string
        -handle *pcap.Handle
        -packetSource *PacketSource
        -stats CaptureStats
        -mu sync.RWMutex
        --
        +Prepare() error
        +Start(ctx, wg) error
        +Close() error
        +GetPacketSource() *PacketSource
        +GetStats() CaptureStats
        -captureLoop(ctx)
        -processPacket(packet)
    }
    
    ' Data Pipeline Implementation
    class dataPipeline <<implementation>> COMPONENT_COLOR {
        -pipelines map[string]*pipeline
        -defaultBufferSize int
        -maxWorkers int
        -stats PipelineStats
        -mu sync.RWMutex
        --
        +Prepare() error
        +Start(ctx, wg) error
        +Close() error
        +Submit([]*SniffData) error
        +GetStats() PipelineStats
        -initializePipelines() error
        -runPipeline(ctx, *pipeline)
        -processData(*pipeline, []*SniffData) error
    }
    
    ' Pipeline Internal Structure
    class pipeline <<internal>> COMPONENT_COLOR {
        -name string
        -dataChan chan []*SniffData
        -workerPool chan struct{}
        -stats PipelineStats
        -mu sync.RWMutex
    }
    
    ' Handler Manager Implementation
    class handlerManager <<implementation>> MANAGER_COLOR {
        -handlers []PacketHandler
        -mu sync.RWMutex
        --
        +RegisterHandler(PacketHandler)
        +GetHandlers() []PacketHandler
        +Start(ctx, wg) error
        +Close() error
    }
    
    ' Packet Handlers
    class HTTPHandler <<handler>> HANDLER_COLOR {
        --
        +Handle(packet) []*SniffData
        +GetType() string
    }
    
    class TCPHandler <<handler>> HANDLER_COLOR {
        --
        +Handle(packet) []*SniffData
        +GetType() string
    }
    
    class UDPHandler <<handler>> HANDLER_COLOR {
        --
        +Handle(packet) []*SniffData
        +GetType() string
    }
    
    ' Configuration and Stats
    class Config <<config>> {
        +Interface string
        +BufferSize int
        +Filter string
        +MaxWorkers int
        +PipelineBufferSize int
    }
    
    class ServerStats <<stats>> {
        +CaptureStats CaptureStats
        +PipelineStats PipelineStats
        +HandlerStats map[string]HandlerStats
    }
    
    class CaptureStats <<stats>> {
        +PacketsReceived uint64
        +PacketsDropped uint64
        +BytesReceived uint64
        +ErrorCount uint64
    }
    
    class PipelineStats <<stats>> {
        +ItemsProcessed uint64
        +ItemsDropped uint64
        +QueueDepth uint64
        +ErrorCount uint64
    }
    
    class HandlerStats <<stats>> {
        +PacketsHandled uint64
        +DataGenerated uint64
        +ErrorCount uint64
    }
}

' External Dependencies
package "External" {
    class "gopacket.Packet" as Packet
    class "gopacket.PacketSource" as PacketSource
    class "pcap.Handle" as Handle
    class "SniffData" as SniffData
}

' Relationships
Server ||-- Config : uses
Server ||-- PacketCapture : contains
Server ||-- DataPipeline : contains
Server ||-- HandlerManager : contains
Server ||-- ServerStats : maintains

PacketCapture <|.. packetCapture : implements
DataPipeline <|.. dataPipeline : implements
HandlerManager <|.. handlerManager : implements
PacketHandler <|.. HTTPHandler : implements
PacketHandler <|.. TCPHandler : implements
PacketHandler <|.. UDPHandler : implements

dataPipeline *-- pipeline : contains multiple
handlerManager o-- PacketHandler : manages multiple

packetCapture --> PacketSource : uses
packetCapture --> Handle : uses
packetCapture --> CaptureStats : updates

dataPipeline --> PipelineStats : updates
pipeline --> SniffData : processes

handlerManager --> HandlerStats : maintains
HTTPHandler --> SniffData : creates
TCPHandler --> SniffData : creates
UDPHandler --> SniffData : creates

ServerStats *-- CaptureStats : aggregates
ServerStats *-- PipelineStats : aggregates
ServerStats *-- HandlerStats : aggregates

' Data Flow
packetCapture --> Packet : reads
handlerManager --> Packet : processes
PacketHandler --> SniffData : generates
dataPipeline --> SniffData : processes

note right of Server : Main entry point\nCoordinates all components
note right of packetCapture : Captures packets from network interface\nUsing gopacket/pcap
note right of dataPipeline : Processes SniffData through\nmultiple pipelines (default, http, tcp)
note right of handlerManager : Manages protocol-specific handlers\nRoutes packets to appropriate handlers
note bottom of pipeline : Internal worker pool\nBuffered channel for data processing

@enduml